# nama-repo-anda

./: .gitignore  SISTEM_EASYMALL.md  api.ilhampradani.me.conf  dashboard.html  index.html  login.html  push.sh  readme_ecomerce.md  site.webmanifest  vercel.json
dinamis/api/: portalpulsa.js
dinamis/api_docs/: api-1 docmentastion koalastore.json  buatqris_docs.json  digiflazz_api_summary.json  domainnameapi_summary.json  fazzapidoc.yaml  miraclegaming_api_summary.json  sslstore_api_documentation.md  sslstore_installation_guide.md
dinamis/ecom_api/: Cargo.toml  old_products.json
dinamis/ecom_api/src/: main.rs
ecom/components/: footer.html  header.html  product_layout.html
ecom/components/include/: buble.html  product.html  service.html  term.html
ecom/folder_user/: about.html  condition.html  legalitas.html  security.html
ecom/js/: index.js  product_page.js
frontend/: README.md  astro.config.mjs  package-lock.json  package.json  vercel.json  wrangler.jsonc
frontend/public/: api_docs.json  dashboard.html.bak  login.html.bak
frontend/public/_astro/: PenggabungUtama.B_wuTcoL.css  login.DfDk0Uqf.css
frontend/src/components/: BottomNav.astro  FloatingChat.astro  Footer.astro  Header.astro  Sidebar.astro
frontend/src/layouts/: PenggabungUtama.astro  penggabung_pageincludefooter.astro
frontend/src/pages/: 404.astro  about.astro  condition.astro  dashboard.astro  dashboard_keranjang.astro  dashboard_notifikasi.astro  dashboard_pengaturan.astro  dashboard_pesanan.astro  dashboard_produk.astro  dashboard_reseller.astro  dashboard_saldo.astro  index.astro  (+19 more)
(+25 files in other folders)
