[package]
name = "ecom_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.29", features = ["bundled"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
rand = "0.8"
axum-extra = { version = "0.9", features = ["cookie"] }
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
url = "2.4"
serde_urlencoded = "0.7"
time = "0.3"
md5 = "0.8.0"
sha2 = "0.10"
